# cs159

./: .gitignore  README.md  bible_dataset.py  childrens_books.py  demo.py  example-demo.txt  example-prompt.txt  gumbel.py  gumbel_hf.py  pride_and_prejudice.py  prompt.txt  pyproject.toml  train.py  wizard_of_oz.py
unsloth_compiled_cache/: UnslothAlignPropTrainer.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDDPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py
