[project]
name = "cs159"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.6.0",
    "bitsandbytes>=0.45.5",
    "datasets>=3.5.1",
    "einops>=0.8.1",
    "huggingface-hub[cli]>=0.30.2",
    "lightning>=2.5.1.post0",
    "nltk>=3.9.1",
    "peft>=0.15.2",
    "sentence-transformers>=4.1.0",
    "transformers>=4.51.3",
    "unsloth>=2025.5.1",
    "wandb>=0.19.10",
]
